Gil & Ben: getAveragePos function that returns the average values of the limelights' estimated rotation and position